# uber-ride-duration-predictorapp

./: README.md  app.py  mlmodel.ipynb  model.pkl  pyproject.toml
static/: style.css
