[project]
name = "uber-project"
version = "1"
description = "This Project is a demonstration of MachineLearning as a App"
authors = [
    {name = "venkateshsoundar",email = "venkimech1992@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
